--- a/resume3.html
+++ b/resume3.html
@@ -94,8 +94,14 @@
         </div> 
 
         <footer>
-        <h2>Contact Details</h2>
-        <p><a href="https://za.linkedin.com/"> linkedin</a></p>
+        <h3>Contact Details</h3>
+        
+        <ul>
+            <a href="http://linkedin.com" target="_blank"><img class="icons" src="images/linkedinIcon.png" width="5%" alt="Chemonique Henning Linkedin"></a>
+            <a href="http://facebook.com" target="_blank"><img class="icons" src="images/FacebookIcon.png" width="5%" alt="Chemonique Henning Focaebook"></a>
+            <a href="http://mail.google.com" target="_blank"><img class="icons" src="images/GmailIcon.png" width="5%" alt="Chemonique Henning Email"></a>
+        </ul>
+        
         </footer>
     </body>
 
